--- a/src/programmers_stack_queue.ipynb
+++ b/src/programmers_stack_queue.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 스택/큐 > 올바른 괄호\n",
+    "# 스택 / 큐"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 올바른 괄호\n",
     "https://school.programmers.co.kr/learn/courses/30/lessons/12909 "
    ]
   },
@@ -36,7 +43,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 스택/큐 > 기능개발\n",
+    "## 기능개발\n",
     "https://school.programmers.co.kr/learn/courses/30/lessons/42586"
    ]
   },
@@ -82,7 +89,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 스택/큐 > 프로세스\n",
+    "## 프로세스\n",
     "https://school.programmers.co.kr/learn/courses/30/lessons/42587 "
    ]
   },
@@ -92,6 +99,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 1. PriorityQueue 사용\n",
+    "\n",
     "from queue import PriorityQueue\n",
     "\n",
     "def solution(priorities, location):\n",
@@ -109,34 +118,57 @@
     "        else:\n",
     "            nth += 1\n",
     "    \n",
-    "    return nth"
+    "    return nth\n",
+    "\n",
+    "solution([1, 1, 9, 1, 1, 1], 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "6"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "solution([1, 1, 9, 1, 1, 1], 0)"
+    "# 2. deque 사용\n",
+    "\n",
+    "from collections import deque\n",
+    "\n",
+    "priorities = [1, 1, 9, 1, 1, 1]\n",
+    "location = 1\n",
+    "\n",
+    "def solution(priorities, location):\n",
+    "    ziped = zip(priorities, range(len(priorities)))\n",
+    "    my_queue = deque(ziped)\n",
+    "    n = 0\n",
+    "    \n",
+    "    while my_queue:\n",
+    "        poped = my_queue.popleft()\n",
+    "        if my_queue and poped[0] < max([x[0] for x in my_queue]):\n",
+    "            my_queue.append(poped)\n",
+    "        else:\n",
+    "            n += 1\n",
+    "            if poped[1] == location:\n",
+    "                return n\n",
+    "\n",
+    "solution(priorities, location)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 스택/큐 > 다리를 지나는 트럭\n",
+    "## 다리를 지나는 트럭\n",
     "https://school.programmers.co.kr/learn/courses/30/lessons/42583"
    ]
   },
@@ -162,96 +194,54 @@
     "\n",
     "    # return bridge,passed\n",
     "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[7] []\n",
-      "[7, 4] []\n",
-      "[7, 4, 5] []\n",
-      "[7, 4, 5, 6] []\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "pop from empty list",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m/Users/cathiekim/Library/CloudStorage/GoogleDrive-makjn4029@gmail.com/My Drive/github-myoungah/python-algorithm-practice/programmers_coding_test.ipynb Cell 19\u001b[0m line \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/cathiekim/Library/CloudStorage/GoogleDrive-makjn4029%40gmail.com/My%20Drive/github-myoungah/python-algorithm-practice/programmers_coding_test.ipynb#X24sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m solution([\u001b[39m2\u001b[39;49m,\u001b[39m2\u001b[39;49m,\u001b[39m2\u001b[39;49m,\u001b[39m1\u001b[39;49m], \u001b[39m10\u001b[39;49m, [\u001b[39m7\u001b[39;49m,\u001b[39m4\u001b[39;49m,\u001b[39m5\u001b[39;49m,\u001b[39m6\u001b[39;49m])\n",
-      "\u001b[1;32m/Users/cathiekim/Library/CloudStorage/GoogleDrive-makjn4029@gmail.com/My Drive/github-myoungah/python-algorithm-practice/programmers_coding_test.ipynb Cell 19\u001b[0m line \u001b[0;36msolution\u001b[0;34m(bridge_length, weight, truck_weights)\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/cathiekim/Library/CloudStorage/GoogleDrive-makjn4029%40gmail.com/My%20Drive/github-myoungah/python-algorithm-practice/programmers_coding_test.ipynb#X24sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m passed \u001b[39m=\u001b[39m []\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/cathiekim/Library/CloudStorage/GoogleDrive-makjn4029%40gmail.com/My%20Drive/github-myoungah/python-algorithm-practice/programmers_coding_test.ipynb#X24sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mwhile\u001b[39;00m \u001b[39mlen\u001b[39m(truck_weights) \u001b[39m>\u001b[39m \u001b[39m0\u001b[39m \u001b[39mor\u001b[39;00m \u001b[39mlen\u001b[39m(bridge_length) \u001b[39m>\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/cathiekim/Library/CloudStorage/GoogleDrive-makjn4029%40gmail.com/My%20Drive/github-myoungah/python-algorithm-practice/programmers_coding_test.ipynb#X24sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m     bridge\u001b[39m.\u001b[39mappend(truck_weights\u001b[39m.\u001b[39;49mpop(\u001b[39m0\u001b[39;49m))\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/cathiekim/Library/CloudStorage/GoogleDrive-makjn4029%40gmail.com/My%20Drive/github-myoungah/python-algorithm-practice/programmers_coding_test.ipynb#X24sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m     passed\u001b[39m.\u001b[39mappend(bridge\u001b[39m.\u001b[39mpop(\u001b[39m0\u001b[39m))\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/cathiekim/Library/CloudStorage/GoogleDrive-makjn4029%40gmail.com/My%20Drive/github-myoungah/python-algorithm-practice/programmers_coding_test.ipynb#X24sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m     \u001b[39mprint\u001b[39m(passed, bridge)\n",
-      "\u001b[0;31mIndexError\u001b[0m: pop from empty list"
-     ]
-    }
-   ],
-   "source": [
+    "\n",
     "solution([2,2,2,1], 10, [7,4,5,6])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[] []\n",
-      "7 2\n",
-      "[] []\n",
-      "4 2\n",
-      "[] []\n",
-      "5 2\n",
-      "[] []\n",
-      "6 1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "truck_weights = [7,4,5,6]\n",
-    "bridge_length = [2,2,2,1]\n",
-    "bridge = []\n",
-    "passed = []\n",
+    "# dequeue 사용\n",
     "\n",
-    "for weight, time in zip(truck_weights,bridge_length):\n",
-    "    \n",
-    "    print(passed, bridge)\n",
-    "    print(weight, time)\n",
-    "    bridge.append(truck_weights.pop(0))\n",
+    "from collections import deque\n",
     "\n",
+    "def solution(bridge_length, weight, truck_weights):\n",
     "\n",
-    "# print(passed, bridge)"
+    "    # 트럭 리스트를 데크로 만든다.\n",
+    "    truck_weights = deque(truck_weights)\n",
+    "\n",
+    "    # bridge_length 길이의 빈 리스트를 만든다.\n",
+    "    bridge = deque([0 for _ in range(bridge_length)])\n",
+    "    bridge_weight = 0\n",
+    "\n",
+    "    # 시간\n",
+    "    time = 0\n",
+    "\n",
+    "    while truck_weights or bridge_weight >0: # truck_weights에 트럭이 남아 있거나, bridge에 트럭이 남아있으면 반복한다.\n",
+    "        # 우선 기존의 차는 트럭이 한칸씩 이동한다.\n",
+    "        completed = bridge.popleft()\n",
+    "        bridge_weight -= completed\n",
+    "        time += 1\n",
+    "\n",
+    "        if bridge_weight + truck_weights[0] <= weight: # bridge의 to-be 무게와 weight를 비교하여 건널 수 있으면 다음 트럭을 올린다\n",
+    "            bridge_weight += truck_weights[0]\n",
+    "            bridge.append(truck_weights.popleft())\n",
+    "            \n",
+    "        else: # 불가능하다면 대기한다\n",
+    "            bridge.append(0)\n",
+    "\n",
+    "    return time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4 2\n",
-      "5 2\n",
-      "6 2\n"
-     ]
-    }
-   ],
-   "source": [
-    "for weight, time in zip(truck_weights,bridge_length):\n",
-    "    print(weight, time)"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
