Add: new solutions for hash, sort, stack_queue

--- a/src/programmers_stack_queue.ipynb
+++ b/src/programmers_stack_queue.ipynb
@@ -200,11 +200,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# dequeue 사용\n",
+    "# IAN 풀이: dequeue 사용 풀이\n",
     "\n",
     "from collections import deque\n",
     "\n",
@@ -220,13 +220,13 @@
     "    # 시간\n",
     "    time = 0\n",
     "\n",
-    "    while truck_weights or bridge_weight >0: # truck_weights에 트럭이 남아 있거나, bridge에 트럭이 남아있으면 반복한다.\n",
+    "    while truck_weights or bridge_weight > 0: # truck_weights에 트럭이 남아 있거나, bridge에 트럭이 남아있으면 반복한다.\n",
     "        # 우선 기존의 차는 트럭이 한칸씩 이동한다.\n",
     "        completed = bridge.popleft()\n",
     "        bridge_weight -= completed\n",
     "        time += 1\n",
     "\n",
-    "        if bridge_weight + truck_weights[0] <= weight: # bridge의 to-be 무게와 weight를 비교하여 건널 수 있으면 다음 트럭을 올린다\n",
+    "        if truck_weights and bridge_weight + truck_weights[0] <= weight: # bridge의 to-be 무게와 weight를 비교하여 건널 수 있으면 다음 트럭을 올린다\n",
     "            bridge_weight += truck_weights[0]\n",
     "            bridge.append(truck_weights.popleft())\n",
     "            \n",
@@ -241,7 +241,108 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# programmers 풀이\n",
+    "\n",
+    "from collections import deque\n",
+    "\n",
+    "def solution(bridge_length, weight, truck_weights):\n",
+    "    bridge = deque(0 for _ in range(bridge_length))\n",
+    "    total_weight = 0\n",
+    "    step = 0\n",
+    "    truck_weights.reverse()\n",
+    "\n",
+    "    while truck_weights:\n",
+    "        total_weight -= bridge.popleft()\n",
+    "        if total_weight + truck_weights[-1] > weight:\n",
+    "            bridge.append(0)\n",
+    "        else:\n",
+    "            truck = truck_weights.pop()\n",
+    "            bridge.append(truck)\n",
+    "            total_weight += truck\n",
+    "        step += 1\n",
+    "\n",
+    "    step += bridge_length\n",
+    "\n",
+    "    return step"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Class 사용\n",
+    "\n",
+    "import collections\n",
+    "\n",
+    "DUMMY_TRUCK = 0\n",
+    "\n",
+    "\n",
+    "class Bridge(object):\n",
+    "\n",
+    "    def __init__(self, length, weight):\n",
+    "        self._max_length = length\n",
+    "        self._max_weight = weight\n",
+    "        self._queue = collections.deque()\n",
+    "        self._current_weight = 0\n",
+    "\n",
+    "    def push(self, truck):\n",
+    "        next_weight = self._current_weight + truck\n",
+    "        if next_weight <= self._max_weight and len(self._queue) < self._max_length:\n",
+    "            self._queue.append(truck)\n",
+    "            self._current_weight = next_weight\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "\n",
+    "    def pop(self):\n",
+    "        item = self._queue.popleft()\n",
+    "        self._current_weight -= item\n",
+    "        return item\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self._queue)\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return 'Bridge({}/{} : [{}])'.format(self._current_weight, self._max_weight, list(self._queue))\n",
+    "\n",
+    "\n",
+    "def solution(bridge_length, weight, truck_weights):\n",
+    "    bridge = Bridge(bridge_length, weight)\n",
+    "    trucks = collections.deque(w for w in truck_weights)\n",
+    "\n",
+    "    for _ in range(bridge_length):\n",
+    "        bridge.push(DUMMY_TRUCK)\n",
+    "\n",
+    "    count = 0\n",
+    "    while trucks:\n",
+    "        bridge.pop()\n",
+    "\n",
+    "        if bridge.push(trucks[0]):\n",
+    "            trucks.popleft()\n",
+    "        else:\n",
+    "            bridge.push(DUMMY_TRUCK)\n",
+    "\n",
+    "        count += 1\n",
+    "\n",
+    "    while bridge:\n",
+    "        bridge.pop()\n",
+    "        count += 1\n",
+    "\n",
+    "    return count\n",
+    "\n",
+    "\n",
+    "def main():\n",
+    "    print(solution(2, 10, [7, 4, 5, 6]), 8)\n",
+    "    print(solution(100, 100, [10]), 101)\n",
+    "    print(solution(100, 100, [10, 10, 10, 10, 10, 10, 10, 10, 10, 10]), 110)\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    main()"
+   ]
   }
  ],
  "metadata": {
